--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,17 @@
 {
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-transform-spread"
+    "@babel/plugin-transform-runtime"
   ],
-  "presets": [["@babel/preset-env", {
-    "targets": {
-      "browsers": ["last 2 versions", "ie 11"]
-    }
-  }], "@babel/preset-react"]
+  "presets": [
+    "@babel/preset-react",
+    ["@babel/preset-env", {
+      "targets": {
+        "ie": 11
+      },
+      "modules": false,
+      "useBuiltIns": "usage",
+      "debug": true
+    }]
+  ]
 }
