--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "description": "latest stuff",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server",
     "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.47",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.47",
-    "@babel/plugin-transform-spread": "^7.0.0-beta.47",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.47",
     "@babel/preset-env": "^7.0.0-beta.47",
     "@babel/preset-react": "^7.0.0-beta.47",
     "babel-loader": "^8.0.0-beta",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.47",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   }
